# FAudio

./: .gitattributes  CMakeLists.txt  README.md  credits.txt
src/: gui.cpp  gui.hpp  main.cpp
